Add unit test without hosting

--- a/14.2-14C18/iOSAppWithTests/iOSAppWithTests.xcodeproj/xcshareddata/xcschemes/iOSAppWithTests (Unit Test, No Host).xcscheme
+++ b/14.2-14C18/iOSAppWithTests/iOSAppWithTests.xcodeproj/xcshareddata/xcschemes/iOSAppWithTests (Unit Test, No Host).xcscheme
@@ -26,33 +26,11 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "35873C162A7185800044C7E3"
-               BuildableName = "iOSAppWithTestsTests.xctest"
-               BlueprintName = "iOSAppWithTestsTests"
-               ReferencedContainer = "container:iOSAppWithTests.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "35873C202A7185800044C7E3"
-               BuildableName = "iOSAppWithTestsUITests.xctest"
-               BlueprintName = "iOSAppWithTestsUITests"
-               ReferencedContainer = "container:iOSAppWithTests.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "35873C372A7189F20044C7E3"
